Finish Day 4
Finished Day 4 problem: Scratchcards.

Put Day 3 on the back burner as it will take time to plan how i want to
find adjacent numbers and get the correct numbers.